option java_outer_classname = "LCQueryRegularData";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.regular";

import "core/proto/common/java/DistrictCode.proto";

message QueryRegularData{
	required	DistrictCode	districtCode	=1;
	required	int64	nodeCode				=2;
}